--- a/my-docs/programming-languages/what-is-a-programming-language.html
+++ b/my-docs/programming-languages/what-is-a-programming-language.html
@@ -16580,7 +16580,7 @@
                                           data-slate-leaf="true"
                                           data-offset-key="f298d6af1d8f4023bfdd91265090a640:0"
                                           class="r-b88u0q"
-                                          >Static semantics[edit]</strong
+                                          >Static semantics[</strong
                                         ></span
                                       >
                                     </div>
