--- a/my-docs/programming-languages/what-is-a-programming-language.html
+++ b/my-docs/programming-languages/what-is-a-programming-language.html
@@ -16960,7 +16960,7 @@
                                           data-slate-leaf="true"
                                           data-offset-key="f7f624a9703e4fe6aec5424099f5588f:0"
                                           class="r-b88u0q"
-                                          >Dynamic semantics[edit]</strong
+                                          >Dynamic semantics</strong
                                         ></span
                                       >
                                     </div>
@@ -17517,7 +17517,7 @@
                                           data-offset-key="68321d1a83c841af939fb5de6b094274:0"
                                           class="r-b88u0q"
                                           >Typed versus untyped
-                                          languages[edit]</strong
+                                          languages</strong
                                         ></span
                                       >
                                     </div>
@@ -18064,7 +18064,7 @@
                                           data-offset-key="a9bc533ab0394faf9e3c20429afccb14:0"
                                           class="r-b88u0q"
                                           >Static versus dynamic
-                                          typing[edit]</strong
+                                          typing</strong
                                         ></span
                                       >
                                     </div>
@@ -18818,7 +18818,7 @@
                                           data-slate-leaf="true"
                                           data-offset-key="708de78588a44fec9ca0af514767fb21:0"
                                           class="r-b88u0q"
-                                          >Weak and strong typing[edit]</strong
+                                          >Weak and strong typing</strong
                                         ></span
                                       >
                                     </div>
@@ -24753,7 +24753,7 @@
                             data-rnw-int-class="nearest___262-4099_"
                             class="css-901oao css-vcwn7f r-1bnj018 r-gg6oyi r-1b43r93 r-majxgm r-hbpseb r-1jkjb"
                           >
-                            Definitions[edit]
+                            Definitions
                           </div></a
                         ><a
                           href="/my-docs/programming-languages/what-is-a-programming-language#history-edit"
@@ -24768,7 +24768,7 @@
                             data-rnw-int-class="nearest___262-4099_"
                             class="css-901oao css-vcwn7f r-1bnj018 r-gg6oyi r-1b43r93 r-majxgm r-hbpseb r-1jkjb"
                           >
-                            History[edit]
+                            History
                           </div></a
                         ><a
                           href="/my-docs/programming-languages/what-is-a-programming-language#elements-edit"
@@ -24783,7 +24783,7 @@
                             data-rnw-int-class="nearest___262-4099_"
                             class="css-901oao css-vcwn7f r-1bnj018 r-gg6oyi r-1b43r93 r-majxgm r-hbpseb r-1jkjb"
                           >
-                            Elements[edit]
+                            Elements
                           </div></a
                         ><a
                           href="/my-docs/programming-languages/what-is-a-programming-language#design-and-implementation-edit"
@@ -24798,7 +24798,7 @@
                             data-rnw-int-class="nearest___262-4099_"
                             class="css-901oao css-vcwn7f r-1bnj018 r-gg6oyi r-1b43r93 r-majxgm r-hbpseb r-1jkjb"
                           >
-                            Design and implementation[edit]
+                            Design and implementation
                           </div></a
                         ><a
                           href="/my-docs/programming-languages/what-is-a-programming-language#proprietary-languages-edit"
@@ -24813,7 +24813,7 @@
                             data-rnw-int-class="nearest___262-4099_"
                             class="css-901oao css-vcwn7f r-1bnj018 r-gg6oyi r-1b43r93 r-majxgm r-hbpseb r-1jkjb"
                           >
-                            Proprietary languages[edit]
+                            Proprietary languages
                           </div></a
                         ><a
                           href="/my-docs/programming-languages/what-is-a-programming-language#use-edit"
@@ -24828,7 +24828,7 @@
                             data-rnw-int-class="nearest___262-4099_"
                             class="css-901oao css-vcwn7f r-1bnj018 r-gg6oyi r-1b43r93 r-majxgm r-hbpseb r-1jkjb"
                           >
-                            Use[edit]
+                            Use
                           </div></a
                         ><a
                           href="/my-docs/programming-languages/what-is-a-programming-language#dialects-flavors-and-implementations-edit"
@@ -24843,7 +24843,7 @@
                             data-rnw-int-class="nearest___262-4099_"
                             class="css-901oao css-vcwn7f r-1bnj018 r-gg6oyi r-1b43r93 r-majxgm r-hbpseb r-1jkjb"
                           >
-                            Dialects, flavors and implementations[edit]
+                            Dialects, flavors and implementations
                           </div></a
                         >
                       </div>
